[gd_scene load_steps=4 format=2]

[ext_resource path="res://elements/grid/grid.gd" type="Script" id=1]
[ext_resource path="res://elements/snake/snake.tscn" type="PackedScene" id=2]
[ext_resource path="res://elements/food/food.tscn" type="PackedScene" id=3]

[node name="Grid" type="Node2D" index="0"]

position = Vector2( 4, 8 )
script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]
grid_width = 22
grid_height = 39

[node name="Clock" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="Snake" parent="." index="1" instance=ExtResource( 2 )]

[node name="Food" parent="." index="2" instance=ExtResource( 3 )]

[connection signal="timeout" from="Clock" to="." method="_on_clock_timeout"]

[connection signal="died" from="Snake" to="." method="snake_died"]

[connection signal="eaten" from="Food" to="." method="snake_ate_food"]


